data: add some new speakers

--- a/layouts/community-cn/devcon2020.html
+++ b/layouts/community-cn/devcon2020.html
@@ -123,10 +123,15 @@ DevCon 2020
         <section>
             <h1 class="dc20-title">立即报名</h1>
             <p>
-                本届活动将采取线上直播的方式，扫描下方二维码填写报名表单，提交成功后添加 TiDB Robot 为好友，回复“DevCon”即可进群看直播，群内会将分享会议资料哦～
+                本届活动将采取线上直播的方式。扫描下方二维码填写报名表单。
+            </p>
+            <p>
+                提交成功后添加小助手好友，回复“DevCon”即可入群看直播。</p>
+            <p>
+                所有现场资料都将在会后于群内放出～
             </p>
             <img class="lazy" src="/images/svgs/loader-spinner.svg"
-                data-original="/images/community/devcon2020/qrCode.png" />
+                data-original="/images/community/devcon2020/qrCode.jpg" />
         </section>
     </div>
 
