--- a/src/less/community/devcon2020.less
+++ b/src/less/community/devcon2020.less
@@ -243,6 +243,8 @@
     .schedule {
         text-align: left;
         margin-bottom: 2rem;
+        padding-top:100px;
+        margin-top:-100px;
 
         .venue-title {
             font-size: @subtitle;
@@ -447,6 +449,7 @@
         background-size: cover;
         color: @M1;
         margin-top: 4rem;
+        padding-top:100px;
 
         section {
             max-width: 1048px;
@@ -458,6 +461,10 @@
             color: @M1;
         }
 
+        h1 {
+            margin-top: -50px;
+        }
+
         p {
             text-align: center;
             line-height: 1.7;
@@ -467,7 +474,7 @@
 
         img {
             margin: 2rem 0;
-            width: 100px;
+            width: 150px;
             height: auto;
         }
 
