feat: expose devcon 2020 entry

--- a/src/less/community/list.less
+++ b/src/less/community/list.less
@@ -173,6 +173,10 @@
         line-height: 1.7;
         bottom: 0.7rem;
         color: white;
+
+        .current-activity-summary {
+          text-align: justify;
+        }
       }
     }
 
