--- a/layouts/partials/archives/version-switcher.html
+++ b/layouts/partials/archives/version-switcher.html
@@ -1,5 +1,6 @@
 {{ $docs_stable_version := .sv }}
 {{ $docs_total_versions := .tv }}
+{{ $docs_type := .docs_type }}
 {{ $current_version := .cv }}
 {{ $permalink := .permalink }}
 {{ $content_file_path := .content_file_path }}
@@ -17,10 +18,12 @@
 
 <div class="version-switcher">
     <button type="button" id="dropdownMenuButton">
-        {{- if eq $current_version "stable" -}}
+        {{- if and (eq $current_version "stable") (ne $docs_type "tidb_data_migration") -}}
         {{ $docs_stable_version }}-rc
         {{- else if eq $current_version "v1.1" -}}
         v1.1-rc (stable)
+        {{- else if and (eq $current_version "stable") (eq $docs_type "tidb_data_migration") -}}
+        v1.0
         {{- else -}}
         {{ $current_version }}
         {{- end -}}
@@ -34,10 +37,12 @@
         <a class="dropdown-item {{ if in $doesnot_exist_ver $i }}unclickable-btn{{ end }}"
             href="
                 {{ if in $doesnot_exist_ver $i }}#{{ else }}{{ if $docs_index_page }}{{ $relative_url }}{{ else }}{{ print $permalink $i }}{{ end }}{{ end }}">
-            {{- if eq $i "stable" -}}
+            {{- if and (eq $i "stable") (ne $docs_type "tidb_data_migration") -}}
             {{ $docs_stable_version }}-rc (stable)
             {{- else if eq $i "v1.1" -}}
             v1.1-rc (stable)
+            {{- else if and (eq $i "stable") (eq $docs_type "tidb_data_migration") -}}
+            v1.0 (stable)
             {{- else -}}
             {{ $i }}
             {{- end -}}
