--- a/layouts/partials/layout/footer.html
+++ b/layouts/partials/layout/footer.html
@@ -24,7 +24,7 @@
                 <h4 class="list-title"><strong>Resources</strong></h4>
                 <ul>
                 <li><a href="/blog/">Blog</a></li>
-                <li><a href="/weekly/">Weekly</a></li>
+                <li><a href="/weekly/">Monthly</a></li>
                 <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
                 <li><a href="/community">TiDB Community</a></li>
                 </ul>
