--- a/layouts/partials/navs/docs-nav.html
+++ b/layouts/partials/navs/docs-nav.html
@@ -8,4 +8,4 @@
 
 {{ $toc_file_name := replace (print .lang_prefix $docs_type "_" $cv "_toc") "." "" }}
 
-{{ partial "archives/sticky-tree.html" (dict "permalink" $permalink "content_file_path" $content_file_path "tree" (index .global.Site.Data $toc_file_name) "title" $title "sv" $sv "tv" $tv "cv" $cv "type" "docs") }}
+{{ partial "archives/sticky-tree.html" (dict "permalink" $permalink "content_file_path" $content_file_path "tree" (index .global.Site.Data $toc_file_name) "title" $title "sv" $sv "tv" $tv "cv" $cv "type" "docs" "docs_type" $docs_type) }}
