--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -15,7 +15,7 @@
 <div class="weekly">
     <div class="container">
         {{ $blogs := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil }}
-        {{- partial "navs/date-tree-nav.html" (dict "title" "Weekly" "data" $blogs "rss" "/weekly/index.xml") -}}
+        {{- partial "navs/date-tree-nav.html" (dict "title" "Monthly" "data" $blogs "rss" "/weekly/index.xml") -}}
 
         <div class="archive">
         <div class="content markdown-body">
