--- a/layouts/partials/archives/article-reading-card.html
+++ b/layouts/partials/archives/article-reading-card.html
@@ -10,7 +10,7 @@
               <div class="logo">
                 {{- if .Params.image}}
                     {{ $landingImg := .Params.image}}
-                    <img class="lazy" src="{{- $landingImg -}}" alt="Cover" />
+                    <img class="lazy" src="https://download.pingcap.com{{- $landingImg -}}" alt="Cover" />
                 {{- else -}}
                     <img class="lazy" src="https://download.pingcap.com/images/readMoreCard/defaultThumbNail.jpg" alt="Cover" />
                 {{- end -}}
