data: update content

--- a/layouts/community-cn/devcon2020.html
+++ b/layouts/community-cn/devcon2020.html
@@ -128,9 +128,9 @@ DevCon 2020
                 本届活动将采取线上直播的方式。扫描下方二维码填写报名表单。
             </p>
             <p>
-                提交成功后添加小助手好友，回复“DevCon”即可入群看直播。</p>
+                提交成功后即可加入「直播交流群」，</p>
             <p>
-                所有现场资料都将在会后于群内放出～
+                所有现场资料都将在大会结束后，分享至群内～
             </p>
             <img class="lazy" src="/images/svgs/loader-spinner.svg"
                 data-original="/images/community/devcon2020/qrCode.jpg" />
