data: update version display

--- a/layouts/partials/archives/version-switcher.html
+++ b/layouts/partials/archives/version-switcher.html
@@ -19,9 +19,9 @@
 <div class="version-switcher">
     <button type="button" id="dropdownMenuButton">
         {{- if and (eq $current_version "stable") (ne $docs_type "tidb_data_migration") -}}
-        {{ $docs_stable_version }}-rc
+        {{ $docs_stable_version }}
         {{- else if eq $current_version "v1.1" -}}
-        v1.1-rc (stable)
+        v1.1 (stable)
         {{- else if and (eq $current_version "stable") (eq $docs_type "tidb_data_migration") -}}
         v1.0
         {{- else -}}
@@ -38,9 +38,9 @@
             href="
                 {{ if in $doesnot_exist_ver $i }}#{{ else }}{{ if $docs_index_page }}{{ $relative_url }}{{ else }}{{ print $permalink $i }}{{ end }}{{ end }}">
             {{- if and (eq $i "stable") (ne $docs_type "tidb_data_migration") -}}
-            {{ $docs_stable_version }}-rc (stable)
+            {{ $docs_stable_version }} (stable)
             {{- else if eq $i "v1.1" -}}
-            v1.1-rc (stable)
+            v1.1 (stable)
             {{- else if and (eq $i "stable") (eq $docs_type "tidb_data_migration") -}}
             v1.0 (stable)
             {{- else -}}
