--- a/layouts/en/privacy-policy.html
+++ b/layouts/en/privacy-policy.html
@@ -1,18 +1,20 @@
-
 {{- define "headTpl" -}}
+{{- partial "head/preload-css" (dict "href" "https://download.pingcap.com/style/github-markdown.css") -}}
 {{- partial "head/preload-css" (dict "href" "/css/doc.css") -}}
 {{ $.Scratch.Set "metaTitle" "TiDB" }}
 {{$.Scratch.Set "data_i18_link" "/privacy-policy/" }}
 {{- end -}}
 
 {{- define "main" -}}
-<div class="blog">
-<div class="container">
-    <div class="archive" style="margin: 0 auto;"><div class="content markdown-body">{{- .Content -}}</div></div>
-</div>
+<div class="doc">
+    <div class="container">
+        <div class="archive" style="margin: 0 auto;">
+            <div class="content markdown-body">{{- .Content -}}</div>
+        </div>
+    </div>
 </div>
 {{- end -}}
 
 {{- define "footJS" -}}
-    <script type="text/javascript" src="/js/anchor.js"></script>
+<script type="text/javascript" src="/js/anchor.js"></script>
 {{- end -}}
