--- a/layouts/page/privacy-policy.html
+++ b/layouts/page/privacy-policy.html
@@ -1,17 +1,20 @@
 {{- define "headTpl" -}}
-    {{- partial "head/preload-css" (dict "href" "/css/doc.css") -}}
-    {{$.Scratch.Set "data_i18_cn" true }}
-    {{$.Scratch.Set "data_i18_link" "/en/privacy-policy/" }}
+{{- partial "head/preload-css" (dict "href" "https://download.pingcap.com/style/github-markdown.css") -}}
+{{- partial "head/preload-css" (dict "href" "/css/doc.css") -}}
+{{$.Scratch.Set "data_i18_cn" true }}
+{{$.Scratch.Set "data_i18_link" "/en/privacy-policy/" }}
 {{- end -}}
 
 {{- define "main" -}}
-<div class="blog">
+<div class="doc">
     <div class="container">
-        <div class="archive" style="margin: 0 auto;"><div class="content markdown-body">{{- .Content -}}</div></div>
+        <div class="archive" style="margin: 0 auto;">
+            <div class="content markdown-body">{{- .Content -}}</div>
+        </div>
     </div>
 </div>
 {{- end -}}
 
 {{- define "footJS" -}}
-    <script type="text/javascript" src="/js/anchor.js"></script>
+<script type="text/javascript" src="/js/anchor.js"></script>
 {{- end -}}
