--- a/layouts/download-cn/list.html
+++ b/layouts/download-cn/list.html
@@ -29,7 +29,7 @@
                         <div class="title">社区版下载</div>
                         <div class="content">
                             <ul>
-                                <li>社区订阅免费试用</li>
+                                <li>社区版免费使用</li>
                                 <li>极速便捷安装</li>
                                 <li>用户社区 <a href="https://asktug.com/" target="_blank">AskTUG</a></li>
                             </ul>
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <a href="/download-cn/community">
-                        <button class="button">社区订阅免费下载</button>
+                        <button class="button">社区版免费下载</button>
                     </a>
                 </div>
             </div>
