Yini/add devcon2020 en (#485)
* feat: add data for devcon 2020 EN

* data: add all speakers

* feat: add devcon 2020 page for English

--- a/layouts/community-cn/devcon2020.html
+++ b/layouts/community-cn/devcon2020.html
@@ -1,5 +1,5 @@
 {{- define "title" -}}
-{{ $.Scratch.Set "metaTitle" "DevCon 2019" }}
+{{ $.Scratch.Set "metaTitle" "DevCon 2020" }}
 DevCon 2020
 {{- end -}}
 
@@ -25,7 +25,7 @@ DevCon 2020
 {{- end -}}
 
 {{- define "main" -}}
-<div class="devCon devCon2020">
+<div class="devCon devCon2020 devCon-cn">
     <div class="banner__section devcon2020-banner">
         <a class="sigup-btn" href="#sign-up">
             立即报名
