data: update watch link

--- a/layouts/community-cn/devcon2020.html
+++ b/layouts/community-cn/devcon2020.html
@@ -6,7 +6,7 @@ DevCon 2020
 {{- define "headTpl" -}}
 {{ $.Scratch.Set "data_i18_cn" true }}
 {{ $.Scratch.Set "nav_active" "community" }}
-{{ $.Scratch.Set "data_i18_link" "/community/organization" }}
+{{ $.Scratch.Set "data_i18_link" "/community/devcon2020" }}
 {{- partial "head/preload-css" (dict "href" "/css/community/devcon2020.css") -}}
 {{- partial "head/preload-css" (dict "href" "/css/community/hackathon2019.css") -}}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
