--- a/layouts/community/devcon2020.html
+++ b/layouts/community/devcon2020.html
@@ -144,7 +144,7 @@ DevCon 2020
                 interested in and click the link below at the right time to watch it live.
             </p>
             <p>
-                <a href="https://live.bilibili.com/4630260?from=search&seid=8102620088995165683" target="_blank">Watch
+                <a href="#dc20-agenda-table">Watch
                     DevCon Live</a>
             </p>
             <p>
