--- a/layouts/partials/layout/header-cn.html
+++ b/layouts/partials/layout/header-cn.html
@@ -9,7 +9,7 @@
                             onclick="trackViews('navbar-university', 'pingcap-university_view')">PingCAP
                             University</a></li>
                     <li class="docs-type-selector {{ if eq $nav_active "docs"}}sel{{end}}" id="docsTypeSelector">
-                        <a class="header-doc-nav" href="#">文档</a>
+                        <!-- <a class="header-doc-nav" href="#">文档</a>
                         <div class="header-dropdown-menu" id="docsTypeSelectorItem">
                             <a class="header-dropdown-item" href="/docs-cn/stable/"
                                 onclick="trackViews('navbar-tidb-docs', 'docs-cn_view')">TiDB</a>
@@ -17,7 +17,8 @@
                                 onclick="trackViews('navbar-operator-docs', 'docs-cn_view')">TiDB in Kubernetes</a>
                             <a class="header-dropdown-item" href="/docs-cn/tidb-data-migration/stable/"
                                 onclick="trackViews('navbar-dm-docs', 'docs-cn_view')">TiDB Data Migration (DM)</a>
-                        </div>
+                        </div> -->
+                        <a class="header-doc-nav" href="https://docs.pingcap.com/" target="_blank">文档</a>
                     </li>
                     <li {{ if eq $nav_active "cases"}}class="sel" {{end}}><a href="/cases-cn">案例</a></li>
                     <li {{ if eq $nav_active "community"}}class="sel" {{end}}><a href="/community-cn">社区</a></li>
