chore: update links on footer

--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -13,11 +13,11 @@
             <div class="flex-list">
                 <h4 class="list-title"><strong>文档</strong></h4>
                 <ul>
-                <li><a href="/docs-cn/stable/quick-start-with-tidb/">快速入门</a></li>
+                <li><a href="https://docs.pingcap.com/zh/tidb/v4.0/quick-start-with-tidb">快速入门</a></li>
                 <li><a href="/blog-cn/tidb-best-practice/">最佳实践</a></li>
                 <li><a href="/docs-cn/stable/faq/tidb/">常见问题解答</a></li>
                 <li><a href="/docs-cn/stable/reference/tools/user-guide/">TiDB 周边工具</a></li>
-                <li><a href="/docs-cn/dev/releases/rn/">版本发布说明</a></li>
+                <li><a href="https://docs.pingcap.com/zh/tidb/dev/release-notes">版本发布说明</a></li>
                 </ul>
             </div>
             <div class="flex-list">
