--- a/src/less/download-cn.less
+++ b/src/less/download-cn.less
@@ -65,6 +65,10 @@
         margin: 0.5rem 0;
     }
 
+    .enterprise-card {
+        height: 600px !important;
+    }
+
     .card {
         padding: 2rem 3rem;
         width: 100%;
