--- a/layouts/download-cn/enterprise.html
+++ b/layouts/download-cn/enterprise.html
@@ -17,7 +17,7 @@
         <div class="tidb-logo">
             <img class="lazy" src="/images/download-cn/tidb-logo.png" />
         </div>
-        <div class="card">
+        <div class="card enterprise-card">
             <div class="header">
                 <div class="rocket-icon"><img class="lazy" src="/images/download-cn/rocket-icon.svg" /></div>
                 <h1>开始体验 TiDB</h1>
