chore: update links on download page

--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -86,9 +86,9 @@
         <div class="more-info">
             <div class="title">查看更多信息</div>
             <div class="items">
-                <p><a href="/docs-cn/stable/production-deployment-using-tiup/">如何安装</a></p>
-                <p><a href="/docs-cn/stable/upgrade-tidb-using-tiup/">如何升级</a></p>
-                <p><a href="/docs-cn/stable/releases/release-4.0.0-rc.2/">Release Note</a></p>
+                <p><a href="https://docs.pingcap.com/zh/tidb/v4.0/production-deployment-using-tiup" target="_blank">如何安装</a></p>
+                <p><a href="https://docs.pingcap.com/zh/tidb/v4.0/upgrade-tidb-using-tiup" target="_blank">如何升级</a></p>
+                <p><a href="https://docs.pingcap.com/zh/tidb/v4.0/release-notes" target="_blank">Release Note</a></p>
             </div>
         </div>
     </div>
