--- a/layouts/download-cn/list.html
+++ b/layouts/download-cn/list.html
@@ -33,7 +33,8 @@
                                 <li>极速便捷安装</li>
                                 <li>用户社区 <a href="https://asktug.com/" target="_blank">AskTUG</a></li>
                             </ul>
-                            <div class="more"><a href="https://docs.pingcap.com/zh/tidb/v4.0" target="_blank">了解更多 TiDB 信息新一代分布式，HTAP 数据库</a></div>
+                            <div class="more"><a href="https://docs.pingcap.com/zh/tidb/v4.0" target="_blank">了解更多 TiDB
+                                    信息新一代分布式，HTAP 数据库</a></div>
                         </div>
                     </div>
                     <a href="/download-cn/community">
@@ -46,7 +47,8 @@
                     <div class="card-image">
                         <figure class="image">
                             <img class="lazy" src="/images/svgs/loader-spinner.svg"
-                                data-original="/images/download-cn/enterprise-subscription.svg" alt="enterprise subscription" />
+                                data-original="/images/download-cn/enterprise-subscription.svg"
+                                alt="enterprise subscription" />
                         </figure>
                     </div>
                     <div class="card-content">
