--- a/src/less/download-cn.less
+++ b/src/less/download-cn.less
@@ -53,7 +53,8 @@
         }
     }
 
-    .enterprise-wrapper {
+    .enterprise-wrapper,
+    .community-wrapper {
         padding: calc(~"@{headerHeight} * 2") 1rem @headerHeight;
         max-width: 500px;
         margin: 0 auto;
@@ -107,7 +108,7 @@
         }
 
         .form-field {
-            margin: 1rem 0 2.5rem;
+            margin: 1rem 0 2rem;
 
             .field {
                 position: relative;
@@ -202,69 +203,6 @@
             text-align: left;
             font-size: @p2;
             color: @T3;
-        }
-
-        .dropdown {
-            width: 100%;
-            margin-bottom: 1rem;
-
-            .dropdown-trigger {
-                width: 100%;
-
-                button {
-                    font-size: @p1;
-                    width: 100%;
-                    justify-content: left;
-                    border-color: @C2;
-
-                    span {
-                        color: @p1;
-                        font-size: @B4;
-                        opacity: 0.5;
-                    }
-
-                    &:after {
-                        content: "";
-                        position: absolute;
-                        top: 1em;
-                        right: 1em;
-                        width: 12px;
-                        height: 12px;
-                        background: url('/images/download-cn/dropdown-arrow.svg') no-repeat;
-                        background-size: contain;
-                        transform: rotate(0deg);
-                        transform-origin: 6px 3px;
-                        transition: transform .5s ease-out;
-                    }
-
-                    &:focus {
-                        border-color: @C3;
-                        box-shadow: none;
-                    }
-                }
-            }
-
-            .dropdown-menu {
-                width: 100%;
-                font-size: @p1;
-
-                .dropdown-content>.dropdown-item {
-                    text-align: left;
-
-                    &:hover {
-                        background-color: @B5;
-                    }
-                }
-            }
-
-            &::after {
-                content: '*';
-                position: absolute;
-                right: -1rem;
-                transform: translateY(-50%);
-                color: @T3;
-                top: 50%;
-            }
         }
 
         .package-desc {
@@ -462,6 +400,49 @@
                         color: @M1;
                     }
                 }
+            }
+        }
+    }
+
+    .community-download {
+        .select-wrapper {
+            position: relative;
+        }
+
+        .select {
+            position: relative;
+            width: 100%;
+            margin-bottom: 1rem;
+
+            select {
+                width: 100%;
+                font-size: 16px;
+                border-color: @C2;
+                border-radius: 4px;
+                color: @B4;
+            }
+
+            &:before {
+                content: '*';
+                position: absolute;
+                right: -1rem;
+                transform: translateY(20%);
+                color: @T3;
+            }
+
+            &:after {
+                content: "" !important;
+                position: absolute;
+                border: none !important;
+                top: 1.2em !important;
+                right: 1em !important;
+                width: 12px !important;
+                height: 12px !important;
+                background: url(/images/download-cn/dropdown-arrow.svg) no-repeat !important;
+                background-size: contain !important;
+                transform: rotate(0) !important;
+                transform-origin: 6px 3px !important;
+                transition: transform .5s ease-out !important;
             }
         }
     }
