chore: update cloud link on header-en

--- a/layouts/partials/layout/header.html
+++ b/layouts/partials/layout/header.html
@@ -6,7 +6,7 @@
         <div class="nav-wrapper">
             <div class="navigation">
                 <ul>
-                <li {{ if eq $nav_active "cloud"}}class="sel"{{end}}><a class="a-en" href="/tidb-cloud/">Cloud</a></li>
+                <li {{ if eq $nav_active "cloud"}}class="sel"{{end}}><a class="a-en" href="https://en.pingcap.com">Cloud</a></li>
                 <li {{ if eq $nav_active "academy"}} class="sel" {{end}}><a class="a-en" class="tidb-academy"
                     href="/tidb-academy">TiDB Academy</a></li>
                 <li class="docs-type-selector {{ if eq $nav_active "docs"}}sel{{end}}" id="docsTypeSelector">
