--- a/layouts/partials/layout/mobile-sidebar.html
+++ b/layouts/partials/layout/mobile-sidebar.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <ul class="ul-base">
-        <li {{ if eq $nav_active "cloud"}}class="sel"{{end}}><a href="/tidb-cloud/">Cloud</a></li>
+        <li {{ if eq $nav_active "cloud"}}class="sel"{{end}}><a href="https://en.pingcap.com/">Cloud</a></li>
         <li {{ if eq $nav_active "academy"}} class="sel" {{end}}><a class="tidb-academy" href="/tidb-academy">TiDB Academy</a></li>
         <li class="docs-type-selector {{ if eq $nav_active "docs"}}sel{{end}}" id="docsTypeSelector">
             <p class="header-doc-nav">Docs</p>
