--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -43,7 +43,7 @@
                 <li><a href="/about-cn/recruit/join/" onclick="trackViews('footer-recruit-join', 'recruit-join_view')">招贤纳士</a>
                 </li>
                 <li><a href="/about-cn/news/">新闻报道</a></li>
-                <li><a href="/privacy-policy/">隐私申明</a></li>
+                <li><a href="/zh/privacy-policy/">隐私申明</a></li>
                 </ul>
             </div>
         </div>
