--- a/layouts/partials/layout/search.html
+++ b/layouts/partials/layout/search.html
@@ -1,23 +1,19 @@
-{{- if eq .lang "en" -}}
-<form class="search-wrapper"
-    action="/search/docs{{if .docs_type }}{{ .docs_type }}{{else}}/{{end}}{{ .search_doc_version }}/">
-    <span class="icon-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}</span>
-    <input data-lang="{{ .lang }}" data-type="{{ .docs_type }}" type="search" id="search-input" name="q"
-        placeholder="{{ if eq .lang "en" }}Search TiDB Docs{{ else }}搜索 TiDB 文档{{ end }}">
-</form>
-{{- else -}}
 <div class="search-wrapper">
     <span class="icon-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}</span>
     <input data-lang="{{ .lang }}" data-type="{{ .docs_type }}" type="search" id="search-input" name="q"
         placeholder="{{ if eq .lang "en" }}Search TiDB Docs{{ else }}搜索 TiDB 文档{{ end }}" onsearch="search()">
 </div>
-{{- end -}}
 
 <script>
     function search() {
+        let lang = 'en'
+        if ($('#search-input').data('lang') == 'cn') {
+            lang = 'zh'
+        }
+        
         const query = $('#search-input').val()
         if (query) {
-            url = "https://docs.pingcap.com/zh/search/?lang=zh&type=tidb&version=v4.0&q=" + query
+            url = "https://docs.pingcap.com/" + (lang == 'zh' ? 'zh/' : '') + "search/?lang=" + lang + "&type=tidb&version=v4.0&q=" + query
             window.location.href = url
         }
     }
