chore: add /zh index page

--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,7 +1,7 @@
 {{- define "headTpl" -}}
     <meta name="baidu-site-verification" content="hrZ03lmoDB" />
     <meta name="google-site-verification" content="drHXf-Q97rcbwLZryBSFV8eW1pj1ddF4MHzZOfODhQU" />
-    {{ $.Scratch.Set "data_i18_link" "/index.html" }}
+    {{ $.Scratch.Set "data_i18_link" "/zh" }}
     {{ $.Scratch.Set "homepage" true }}
     {{- partial "head/preload-css" (dict "href" "/css/index.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/carousel.css") -}}
