--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -5,7 +5,7 @@
     {{$.Scratch.Set "data_i18_cn" true }}
     {{$.Scratch.Set "data_i18_link" "/en" }}
     {{- partial "head/preload-css" (dict "href" "/css/index.css") -}}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/css/swiper.css">
+    {{- partial "head/preload-css" (dict "href" "/css/vendor/swiper.css") -}}
 {{- end -}}
 
 {{- define "main" -}}
@@ -176,6 +176,6 @@
 {{- end -}}
 
 {{- define "footJS" -}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/js/swiper.min.js"></script>
+    <script type="text/javascript" src="/js/vendor/swiper.min.js"></script>
     <script type="text/javascript" src="/js/multi_slides_carousel.js"></script>
 {{- end -}}
