--- a/layouts/community-cn/techday2017.html
+++ b/layouts/community-cn/techday2017.html
@@ -9,7 +9,7 @@
     {{- partial "head/preload-css" (dict "href" "/css/community/techday.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/community/agenda.css") -}}
     {{ $.Scratch.Set "data_i18_link" "/community/organization" }}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/css/swiper.css">
+    {{- partial "head/preload-css" (dict "href" "/css/vendor/swiper.css") -}}
 {{- end -}}
 
 {{- define "main" -}}
@@ -47,7 +47,7 @@
 {{- end -}}
 
 {{- define "footJS" -}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/js/swiper.min.js"></script>
+    <script type="text/javascript" src="/js/vendor/swiper.min.js"></script>
     <script type="text/javascript" src="/js/multi_slides_carousel.js"></script>
     <script type="text/javascript" src="/js/devcon.js"></script>
 {{- end -}}
