--- a/layouts/community-cn/techday2019.html
+++ b/layouts/community-cn/techday2019.html
@@ -10,7 +10,7 @@
     {{- partial "head/preload-css" (dict "href" "/css/community/techday.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/community/agenda.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/community/devcon2019.css") -}}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/css/swiper.css">
+    {{- partial "head/preload-css" (dict "href" "/css/vendor/swiper.css") -}}
 {{- end -}}
 
 {{- define "main" -}}
@@ -171,7 +171,7 @@
 {{- end -}}
 
 {{- define "footJS" -}}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/js/swiper.min.js"></script>
+<script type="text/javascript" src="/js/vendor/swiper.min.js"></script>
 <script type="text/javascript" src="/js/multi_slides_carousel.js"></script>
 <script type="text/javascript" src="/js/video_on_modal.js"></script>
 <script type="text/javascript" src="/js/community.js"></script>
