chore: add a new package to community download page

--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -38,6 +38,7 @@
                                 <option value="" disabled selected class="disabled">选择 TiDB 版本</option>
                                 <option>v4.0.0</option>
                                 <option>v4.0.1</option>
+                                <option>v4.0.2</option>
                             </select>
                         </div>
                     </div>
