fix: update invalid links

--- a/layouts/community/organization.html
+++ b/layouts/community/organization.html
@@ -22,7 +22,7 @@
                       <div class="org-tooltiptext tt-tr_en org-tooltiptext_en">The Project Management Committee (PMC) functions as the core management team that oversees the TiDB community. The PMC decides the roadmap of the project and makes major decisions related to the community.</div>
                   </div>
                   <div class="branch">
-                    <a href="/community/developer-group/"><button class="branchBtn devBtn orgBtn tl j-hover">Developer Group</button></a>
+                    <a href="https://github.com/pingcap/community/tree/master/architecture#tidb-developer-group "><button class="branchBtn devBtn orgBtn tl j-hover">Developer Group</button></a>
                     <div class="devSubBtns tr">
                       {{- range $idx, $i := .Site.Data.community_organization.architecture.developer_group_en -}}
                         <div class="btn-tooltip">
