chore: update intel invalid link

--- a/layouts/solutions/intel.html
+++ b/layouts/solutions/intel.html
@@ -58,7 +58,7 @@
     <section>
         <div class="solution-application">
             <h2 class="section-title">应用场景及性能</h2>
-            <p>开源分布式 HTAP (Hybrid Transactional/Analytical Processing) 数据库 TiDB 为企业运行在线事务处理和在线分析处理业务提供了可行方案。经验证，这些通过预先调整和测试的方案配置能够加快用户部署 TiDB 数据库，并提升性能、安全性、可用性等方面的表现。更多的联合性能测试数据及推荐配置详情请您可访问 <a href="https://www.intel.cn/content/www/cn/zh/architecture-and-technology/intel-select-solution-based-on-pingcap-tidb.html?wapkw=pingcap" target="_blank">Intel 网站</a>，下载官方白皮书或 <a href="mailto:info@pingcap.com">联系 PingCAP 官方</a>，获得更多详情介绍。</p>
+            <p>开源分布式 HTAP (Hybrid Transactional/Analytical Processing) 数据库 TiDB 为企业运行在线事务处理和在线分析处理业务提供了可行方案。经验证，这些通过预先调整和测试的方案配置能够加快用户部署 TiDB 数据库，并提升性能、安全性、可用性等方面的表现。更多的联合性能测试数据及推荐配置详情请您可访问 <a href="https://www.intel.cn/content/www/cn/zh/products/solutions/select-solutions/intel-select-solution-based-on-pingcap-tidb.html?from=singlemessage" target="_blank">Intel 网站</a>，下载官方白皮书或 <a href="mailto:info@pingcap.com">联系 PingCAP 官方</a>，获得更多详情介绍。</p>
                 <a href="https://download.pingcap.org/solution-intel.pdf" target="_blank"><button>下载白皮书</button></a>
         </div>
     </section>
