--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -39,6 +39,7 @@
                                 <option>v4.0.0</option>
                                 <option>v4.0.1</option>
                                 <option>v4.0.2</option>
+                                <option>v4.0.3</option>
                             </select>
                         </div>
                     </div>
