--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -40,6 +40,7 @@
                                 <option>v4.0.1</option>
                                 <option>v4.0.2</option>
                                 <option>v4.0.3</option>
+                                <option>v4.0.4</option>
                             </select>
                         </div>
                     </div>
